--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,7 @@
 services:
   - type: web
-    name: springboot-restful-api
-    env: docker
-    dockerfilePath: Dockerfile
-    buildCommand: "./mvnw clean install -DskipTests"
-    startCommand: "java -jar app.jar"
-    envVars:
-      - key: JAVA_VERSION
-        value: 17
+    name: springboot-notification-app
+    plan: free
+    region: oregon
+    envVars: []
+    dockerfilePath: ./Dockerfile
